--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,22 @@
   "description": "",
   "private": "true",
   "scripts": {
+    "dev": "webpack-dev-server --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-loader": "^8.2.2",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-transform-react-jsx": "^7.12.7",
+    "@babel/preset-env": "^7.12.7",
+    "preact": "^10.5.7",
+    "webjack": "^0.1.6"
   }
 }
