--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,11 @@
     "@babel/core": "^7.12.9",
     "@babel/plugin-transform-react-jsx": "^7.12.7",
     "@babel/preset-env": "^7.12.7",
+    "css-loader": "^5.0.1",
+    "normalize.css": "^8.0.1",
     "preact": "^10.5.7",
+    "protobufjs": "^6.10.2",
+    "style-loader": "^2.0.0",
     "webjack": "^0.1.6"
   }
 }
