--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,16 @@
   "license": "ISC",
   "devDependencies": {
     "babel-loader": "^8.2.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
     "@aws-crypto/sha256-browser": "^1.1.0",
     "@babel/core": "^7.12.9",
     "@babel/plugin-transform-react-jsx": "^7.12.7",
     "@babel/preset-env": "^7.12.7",
+    "@ionic/react": "^8.2.6",
     "css-loader": "^5.0.1",
     "normalize.css": "^8.0.1",
     "preact": "^10.5.7",
