--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "devDependencies": {
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^12.0.2",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.0.4",
+    "workbox-webpack-plugin": "^7.1.0"
   },
   "dependencies": {
     "@aws-crypto/sha256-browser": "^1.1.0",
